# ssp_OpenGL

./: .gitignore  CMakeLists.txt  README.md
01_window/: CMakeLists.txt  main.cpp  note.txt
03_triangle/: CMakeLists.txt  main.cpp
04_shader/: CMakeLists.txt  _vert.glsl  main.cpp  note.txt
05_textures/: CMakeLists.txt  Shader.cpp  Shader.h  _vert.glsl  main.cpp  note.txt
06_transformations/: CMakeLists.txt  _vert.glsl  main.cpp  note.txt
07_coordinate_systems/: CMakeLists.txt  Shader.h  _frag.glsl  _vert.glsl  main.cpp  note.txt
08_camera/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  main.cpp  note.txt
10_color/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  _cube_frag.glsl  _lit_frag.glsl  _vert.glsl  main.cpp
bins/: 01_window  03_triangle
glad/include/glad/: glad.h
glad/src/: glad.c
